--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-font-loader": "^1.1.0",
     "react": "18.2.0",
     "react-native": "0.73.1",
+    "react-native-drop-shadow": "^1.0.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "^4.8.2",
