--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
