--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/auth": "^18.7.3",
     "@react-native-firebase/firestore": "^18.7.3",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/elements": "^1.3.21",
     "@react-navigation/native": "^6.1.9",
@@ -26,6 +28,8 @@
     "react-native": "0.73.1",
     "react-native-drop-shadow": "^1.0.0",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-localize": "^3.0.6",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
