--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/datetimepicker": "^7.6.4",
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/auth": "^18.7.3",
     "@react-native-firebase/firestore": "^18.7.3",
@@ -28,13 +28,15 @@
     "react-native": "0.73.1",
     "react-native-drop-shadow": "^1.0.0",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-localize": "^3.0.6",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-webview": "^13.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -42,7 +44,7 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "^0.73.18",
     "@react-native/eslint-config": "^0.73.1",
-    "@react-native/metro-config": "^0.73.2",
+    "@react-native/metro-config": "^0.73.5",
     "@react-native/typescript-config": "^0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
