--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "react": "18.2.0",
     "react-native": "0.73.1",
     "react-native-drop-shadow": "^1.0.0",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native-gesture-handler": "^2.16.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-localize": "^3.0.6",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.4",
+    "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-snap-carousel": "^3.9.1",
