--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "body-parser": "^1.20.2",
     "expo-checkbox": "^2.5.0",
     "expo-font": "^11.6.0",
     "expo-font-loader": "^1.1.0",
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-native": "0.73.1",
     "react-native-drop-shadow": "^1.0.0",
@@ -34,6 +37,7 @@
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.4",
     "react-native-reanimated": "^3.8.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-snap-carousel": "^3.9.1",
