--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "expo-checkbox": "^2.5.0",
     "expo-font": "^11.6.0",
