--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-community/datetimepicker": "^7.6.4",
+    "@react-native-community/datetimepicker": "^7.7.0",
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/auth": "^18.7.3",
     "@react-native-firebase/firestore": "^18.7.3",
@@ -27,6 +27,7 @@
     "expo-font": "^11.6.0",
     "expo-font-loader": "^1.1.0",
     "express": "^4.19.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-native": "0.73.1",
@@ -37,6 +38,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.4",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.8.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.8.2",
