--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-native": "0.73.1",
     "react-native-drop-shadow": "^1.0.0",
     "react-native-gesture-handler": "^2.16.0",
+
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-localize": "^3.0.6",
     "react-native-modal": "^13.0.1",
